Added PythonNotes notebook and the structure function file

--- a/JupyterNotes.ipynb
+++ b/JupyterNotes.ipynb
@@ -20,8 +20,9 @@
     "<br><br> &#9695; `Ctrl + s`: __Save notebook__\n",
     "<br><br> `x`: __Cut cell__\n",
     "<br><br> `c`: __Copy cell__\n",
-    "<br><br>`v`: __Paste cell__\n",
-    "<br><br> `z` __Undo operation__\n",
+    "<br><br> `v`: __Paste cell__\n",
+    "<br><br> `z`: __Undo operation__\n",
+    "<br><br> `Ctrl + /`: __Coment block__\n",
     "\n",
     "<br>\n",
     "https://www.w3schools.com/charsets/ref_utf_geometric.asp\n",
