Completed all list function examples and TODO list

--- a/PythonNotes.ipynb
+++ b/PythonNotes.ipynb
@@ -9,7 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Python only searches the current directory\n",
+    "import sys\n",
+    "sys.path.append('Functions')\n",
+    "from ListFunctions import listFunctions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -28,11 +40,6 @@
     }
    ],
    "source": [
-    "# Python only searches the current directory\n",
-    "import sys\n",
-    "sys.path.append('Functions')\n",
-    "from ListFunctions import listFunctions\n",
-    "\n",
     "# The value of variables is kept when the cell ends the running \n",
     "foo = 5\n",
     "\n",
@@ -56,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +72,7 @@
        "' Strings '"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,33 +94,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True List before:  [21, 40.5, 'String', 42]\n",
-      "List after:  None\n"
+      "True\n",
+      "Multi-dimensional list or list of objects:  [[1, 2, 3], [4, 5], [6, 7], [8]]\n",
+      "Flattened list [1, 2, 3, 4, 5, 6, 7, 8]\n"
      ]
     }
    ],
    "source": [
     "\"\"\" Lists \"\"\"\n",
     "print( type([]) is list) # Like STLvector (not like STLlist) but here you can put objects of different types\n",
-    "nums = []\n",
-    "nums.append(21) \n",
-    "nums.append(40.5) \n",
-    "nums.append(\"String\") \n",
-    "nums.append(42) \n",
-    "\n",
-    "listFunctions(3, nums)\n",
-    "\n",
-    "# append() Adds an element at the end of the list\n",
-    "# clear() Removes all the elements from the list\n",
-    "# copy() Returns a copy of the list\n",
-    "# count() Returns the number of elements with the specified value\n",
-    "# extend() Add the elements of a list (or any iterable), to the end of the current list\n",
-    "# index() Returns the index of the first element with the specified value\n",
-    "# insert() Adds an element at the specified position\n",
-    "# pop() Removes the element at the specified position\n",
-    "# remove() Removes the first item with the specified value\n",
-    "# reverse() Reverses the order of the list\n",
-    "# sort() Sorts the list"
+    "nums = [21, 4.5, \"String\", 42, [7, 2]]\n",
+    "listFunctions(10, nums) # 0 - 10 options"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# "
    ]
   },
   {
@@ -121,6 +121,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# "
    ]
